# openwordwriter

./: .gitignore  NEWS  README.md  abiword.appdata.xml  com.abisource.AbiWord.appdata.xml.in  configure.ac
plugins/aiksaurus/: Makefile.am
plugins/aiksaurus/xp/: AiksaurusABI.cpp
plugins/collab/backends/: Makefile.am
plugins/collab/core/: Makefile.am
plugins/epub/: Makefile.am
plugins/epub/dialogs/: Makefile.am
plugins/epub/dialogs/gtk/: ap_UnixDialog_EpubExportOptions.cpp
plugins/goffice/: Makefile.am
plugins/goffice/gtk/: AbiGOChart.cpp  AbiGOComponent.cpp
plugins/grammar/: Makefile.am  plugin.m4
plugins/grammar/xp/: AbiGrammarCheck.cpp
plugins/latex/: Makefile.am
plugins/latex/xp/: ie_exp_LaTeX.cpp
plugins/opendocument/: Makefile.am
plugins/opendocument/imp/xp/: ODi_ElementStack.cpp  ODi_ListLevelStyle.cpp  ODi_StreamListener.cpp  ODi_XMLRecorder.cpp
plugins/openwriter/: Makefile.am
plugins/openxml/: Makefile.am
plugins/openxml/common/xp/: OXML_LangToScriptConverter.gperf  OXML_LangToScriptConverter.h
plugins/paint/: Makefile.am
plugins/testharness/: Makefile.am  README.md
plugins/testharness/xp/: Makefile.am
src/af/ev/: Makefile.am
src/af/ev/gtk/: Makefile.am  ev_UnixFontCombo.cpp  ev_UnixKeyboard.cpp  ev_UnixMenu.cpp  ev_UnixMouse.cpp  ev_UnixToolbar.cpp  ev_UnixToolbar.h
src/af/gr/: Makefile.am
src/af/gr/gtk/: Makefile.am  gr_CairoImage.cpp  gr_UnixCairoGraphics.cpp  gr_UnixCairoGraphics.h
src/af/gr/win/: gr_Win32Graphics.cpp
src/af/gr/xp/: gr_CairoGraphics.cpp  gr_EmbedManager.cpp  gr_Graphics.cpp  gr_Graphics.h  gr_Image.cpp
src/af/util/: Makefile.am
src/af/util/xp/: Makefile.am  ut_Script.cpp  ut_assert.h  ut_std_string.cpp  ut_std_string.h  ut_string.cpp  ut_string.h  ut_stringbuf.cpp  ut_types.h  ut_units.cpp  ut_units.h  ut_uuid.cpp  ut_uuid.h
src/af/xap/: Makefile.am
src/af/xap/gtk/: Makefile.am  xap_GtkUtils.cpp  xap_GtkUtils.h  xap_UnixApp.cpp  xap_UnixClipboard.cpp  xap_UnixClipboard.h  xap_UnixCustomWidget.cpp  xap_UnixDialog.cpp  xap_UnixDialogHelper.cpp  xap_UnixDialogHelper.h  xap_UnixDlg_About.cpp  xap_UnixDlg_ClipArt.cpp  xap_UnixDlg_DocComparison-4.ui  xap_UnixDlg_Encoding-4.ui  xap_UnixDlg_FileOpenSaveAs.cpp  xap_UnixDlg_FontChooser.cpp  xap_UnixDlg_HTMLOptions.cpp  xap_UnixDlg_History-4.ui  xap_UnixDlg_Image-4.ui  xap_UnixDlg_Insert_Symbol.cpp  xap_UnixDlg_Language-4.ui  xap_UnixDlg_ListDocuments-4.ui  xap_UnixDlg_Password-4.ui  xap_UnixDlg_PluginManager-4.ui  xap_UnixDlg_PluginManager.cpp  xap_UnixDlg_WindowMore-4.ui  xap_UnixDlg_Zoom-4.ui  xap_UnixDlg_Zoom.cpp  xap_UnixDlg_Zoom.h  xap_UnixFontPreview.cpp  xap_UnixFrameImpl.cpp  xap_UnixFrameImpl.h  xap_UnixTableWidget.cpp  xap_UnixTableWidget.h
src/af/xap/xp/: xad_Document.cpp  xap_App.cpp  xap_CustomWidget.cpp  xap_CustomWidget.h  xap_Dialog.cpp  xap_DialogFactory.cpp  xap_DialogFactory.h  xap_Dlg_FileOpenSaveAs.h  xap_FakeClipboard.cpp  xap_Module.h  xap_ModuleManager.cpp  xap_Preview.cpp  xap_Preview.h  xap_Toolbar_Layouts.h  xav_View.cpp
src/text/: Makefile.am
src/text/fmt/gtk/: fv_UnixFrameEdit.cpp  fv_UnixInlineImage.cpp  fv_UnixSelectionHandles.cpp  fv_UnixVisualDrag.cpp  gtktexthandle.cpp  gtktexthandleprivate.h
src/text/fmt/xp/: fb_ColumnBreaker.cpp  fl_AutoNum.cpp  fl_BlockLayout.cpp  fl_BlockLayout.h  fl_ContainerLayout.cpp  fl_DocLayout.cpp  fl_DocLayout.h  fl_FootnoteLayout.cpp  fl_Layout.cpp  fl_Layout.h  fl_SectionLayout.cpp  fl_TOCLayout.cpp  fl_TableLayout.cpp  fp_Column.cpp  fp_Column.h  fp_ContainerObject.h  fp_EmbedRun.cpp  fp_FrameContainer.cpp  fp_Line.cpp  fp_Line.h  fp_Page.cpp  fp_Run.cpp  fp_Run.h  fp_TableContainer.cpp  fp_TextRun.cpp  fv_Selection.cpp  fv_View.cpp  fv_View.h  fv_View_cmd.cpp  fv_View_protected.cpp  fv_VisualDragText.cpp
src/text/ptbl/xp/: pd_Document.cpp  pd_Document.h  pd_DocumentRDF.cpp  pd_DocumentRDF.h  pf_Fragments.cpp  pp_Property.cpp  pp_Revision.cpp  pt_PT_Listener.cpp  px_ChangeRecord.cpp
src/wp/ap/: Makefile.am
src/wp/ap/cocoa/: ap_CocoaDialog_FormatFrame.cpp  ap_CocoaDialog_FormatFrame.h  ap_CocoaDialog_FormatTable.cpp  ap_CocoaDialog_FormatTable.h
src/wp/ap/gtk/: GTKCommon.cpp  Makefile.am  abiwidget.cpp  ap_DocView.cpp  ap_RDFLocationGTK.cpp  ap_RDFLocationGTK.h  ap_RDFSemanticItemGTKInjected.cpp  ap_UnixApp.cpp  ap_UnixDialog_Annotation-4.ui  ap_UnixDialog_Background.cpp  ap_UnixDialog_Border_Shading-4.ui  ap_UnixDialog_Break-4.ui  ap_UnixDialog_Break.cpp  ap_UnixDialog_Break.h  ap_UnixDialog_Columns.cpp  ap_UnixDialog_Field-4.ui  ap_UnixDialog_FormatFootnotes-4.ui  ap_UnixDialog_FormatFrame-4.ui  ap_UnixDialog_FormatFrame.cpp  ap_UnixDialog_FormatFrame.h  ap_UnixDialog_FormatTOC-4.ui  ap_UnixDialog_FormatTable-4.ui  ap_UnixDialog_FormatTable.cpp  ap_UnixDialog_FormatTable.h  ap_UnixDialog_Goto-4.ui  ap_UnixDialog_Goto.cpp  ap_UnixDialog_HdrFtr-4.ui  ap_UnixDialog_InsertBookmark.cpp  ap_UnixDialog_InsertHyperlink.cpp  ap_UnixDialog_InsertTable-4.ui  ap_UnixDialog_InsertTable.cpp  ap_UnixDialog_InsertTable.h  ap_UnixDialog_InsertXMLID.cpp  ap_UnixDialog_Insert_DateTime-4.ui  ap_UnixDialog_Latex-4.ui  ap_UnixDialog_ListRevisions.cpp  ap_UnixDialog_Lists.cpp  ap_UnixDialog_MailMerge-4.ui  ap_UnixDialog_MarkRevisions.cpp  ap_UnixDialog_MergeCells.cpp  (+32 more)
src/wp/ap/win/: ap_Win32Dialog_FormatFrame.h  ap_Win32Dialog_FormatTable.cpp  ap_Win32Dialog_FormatTable.h
src/wp/ap/xp/: ap_App.cpp  ap_Dialog_FormatFrame.cpp  ap_Dialog_FormatFrame.h  ap_Dialog_FormatTable.cpp  ap_Dialog_FormatTable.h  ap_Dialog_Goto.cpp  ap_Dialog_Lists.cpp  ap_Dialog_Tab.cpp  ap_EditMethods.cpp  ap_LeftRuler.cpp  ap_LoadBindings.cpp  ap_LoadBindings.h  ap_Menu_Layouts.cpp  ap_Toolbar_Layouts.cpp  ap_TopRuler.cpp
src/wp/impexp/: Makefile.am
src/wp/impexp/gtk/: Makefile.am
src/wp/impexp/xp/: ie_Table.cpp  ie_exp.cpp  ie_exp_AbiWord_1.cpp  ie_exp_HTML.cpp  ie_exp_HTML_NavigationHelper.cpp  ie_exp_RTF.cpp  ie_exp_RTF_listenerWriteDoc.cpp  ie_imp.cpp  ie_impGraphic.cpp  ie_imp_MsWord_97.cpp  ie_imp_RTF.cpp
src/wp/test/: Makefile.am
src/wp/test/unix/: test_main.cpp
src/wp/test/xp/: all_test.h
(+84 files in other folders)
